--- a/kanjax_popup_template.html
+++ b/kanjax_popup_template.html
@@ -1,13 +1,13 @@
 <table border="0" align="center"><tr><td style="text-align: center">
 			<span class="huge japanese" id="kanji">{{kanji}}</span>
 		</td><td style="text-align: center">
-			<span class="large bold" id="keyword">{{keyword}}</span>
+			<span class="large bold editable" id="keyword">{{keyword}}</span>
 </td></tr></table>
-<div class="medium italic" id="meaning">{{meaning}}</div></br>
+<div class="medium italic editable" id="meaning">{{meaning}}</div></br>
 <div class="small italic">
-	On: <span id="onyomi" class="japanese">{{onyomia}}</span>,
+	On: <span id="onyomi" class="japanese">{{onyomi}}</span>,
 	Kun: <span id="kunyomi" class="japanese">{{kunyomi}}</span></div></br>
-<div class="medium" id="desc">{{desc}}</div></br>
+<div class="medium editable" id="desc">{{desc}}</div></br>
 <img id="strokes" src="kanjax/images/{{strokes}}"/></br>
 <div class="medium" style="margin-top:0.5em">
 	<a href="http://jisho.org/search/%23kanji%20{{kanji}}" id="jisho">Jisho</a>
