--- a/prova.html
+++ b/prova.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src="kanjax/jquery-2.1.4.min.js"></script>
 <script src="kanjax/jquery.bpopup.min.js"></script>
+<script src="kanjax/jquery.jeditable.mini.js"></script>
 <script src="kanjax/kanjax.js"></script>
 </head>
 <body>
