much nicer test

--- a/kanjax/kanjax_popup_template.html
+++ b/kanjax/kanjax_popup_template.html
@@ -5,8 +5,8 @@
 </td></tr></table>
 <div class="medium italic editable" id="meaning">{{meaning}}</div></br>
 <div class="small italic">
-	On: <span id="onyomi" class="japanese">{{onyomi}}</span>,
-	Kun: <span id="kunyomi" class="japanese">{{kunyomi}}</span></div></br>
+	On: <span id="onyomi" class="medium japanese">{{onyomi}}</span>,
+	Kun: <span id="kunyomi" class="medium japanese">{{kunyomi}}</span></div></br>
 <div class="medium editable" id="desc">{{desc}}</div></br>
 <img id="strokes" src="kanjax/images/{{strokes}}"/></br>
 <div class="medium" style="margin-top:0.5em">
