--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Una prova</title>
+<title>KanJax Demo</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script src="lib/jquery-2.1.4.min.js"></script>
 <script src="lib/jquery.bpopup.min.js"></script>
