--- a/kanjax/kanjax_popup_template.html
+++ b/kanjax/kanjax_popup_template.html
@@ -3,13 +3,13 @@
   </td><td style="text-align: center">
     <span class="large bold editable" id="keyword">{{keyword}}</span>
 </td></tr></table>
-<div class="medium italic editable" id="meaning">{{meaning}}</div></br>
-<div class="small italic">
-  On: <span id="onyomi" class="medium japanese">{{onyomi}}</span>,
-  Kun: <span id="kunyomi" class="medium japanese">{{kunyomi}}</span></div></br>
-<div class="medium editable" id="desc">{{desc}}</div></br>
-<img id="strokes" src="kanjax/images/{{strokes}}"/></br>
-<div class="medium" style="margin-top:0.5em">
+<span class="medium italic editable" id="meaning">{{meaning}}</span>
+<div class="small italic" id="yomi">
+  On: <span id="onyomi" class="medium japanese">{{onyomi}}</span>,&nbsp;&nbsp;
+  Kun: <span id="kunyomi" class="medium japanese">{{kunyomi}}</span></div>
+<span class="medium editable" id="desc">{{desc}}</span>
+<img id="strokes" src="kanjax/images/{{strokes}}"/>
+<div class="medium">
   <a href="http://jisho.org/search/%23kanji%20{{kanji}}" id="jisho">Jisho</a>
   <a href="http://kanji.koohii.com/study/kanji/{{kanji}}" id="koohii">Koohii</a>
 </div>
