--- a/kanjax/kanjax_popup_template.html
+++ b/kanjax/kanjax_popup_template.html
@@ -7,7 +7,7 @@
 <div class="small italic" id="yomi">
   On: <span id="onyomi" class="medium japanese">{{onyomi}}</span>,&nbsp;&nbsp;
   Kun: <span id="kunyomi" class="medium japanese">{{kunyomi}}</span></div>
-<span class="medium editable" id="desc">{{desc}}</span>
+<span class="medium editable" id="desc">{{desc}}</span><br>
 <img id="strokes" src="kanjax/images/{{strokes}}"/>
 <div class="medium">
   <a href="http://jisho.org/search/%23kanji%20{{kanji}}" id="jisho">Jisho</a>
