--- a/test.html
+++ b/test.html
@@ -63,7 +63,7 @@ body {
   </div>
   <div class="container">
     <h3>Links</h3>
-    These are out links, kanjis in them are not touched.<br>
+    These are in links, and are activated via a right-click:<br>
     <a href="http://jisho.org/search/%23words%20%E5%BF%83">心</a>
     <a href="http://jisho.org/search/%23words%20%E5%85%83%E6%B0%97">元気</a>
   </div>
