updated README, cleaner text.

--- a/test.html
+++ b/test.html
@@ -40,9 +40,9 @@ body {
     <h3>Normal text</h3>
     かなり多くのアメリカ人が寿司を好む。<br/>
     こうして私はいつも魚を料理する。<br/>
-    <input type="button" value="Add links in the page"
+    <input type="button" value="Add kanji info in the page"
                               onclick="KanJax.addLinks();"/>
-    <input type="button" value="Remove links in the page"
+    <input type="button" value="Remove kanji info in the page"
                               onclick="KanJax.removeLinks();"/>
   </div>
   <div id="forbidden" class="kanjax_forbidden container">
@@ -51,9 +51,9 @@ body {
     この夏最高の暑さだ。<br/>
     この夏休みはどこかへ行くのですか。<br/>
     But you can still force links in it:<br/>
-    <input type="button" value="Add links in this div"
+    <input type="button" value="Add kanji info in this div"
                               onclick="KanJax.addLinks(document.getElementById('forbidden'));"/>
-    <input type="button" value="Remove links in this div"
+    <input type="button" value="Remove kanji info in this div"
                               onclick="KanJax.removeLinks(document.getElementById('forbidden'));"/>
   </div>
   <div class="container">
@@ -63,7 +63,7 @@ body {
   </div>
   <div class="container">
     <h3>Links</h3>
-    These are in links, and are activated via a right-click:<br>
+    These are in links, and are activated via a central-click:<br>
     <a href="http://jisho.org/search/%23words%20%E5%BF%83">心</a>
     <a href="http://jisho.org/search/%23words%20%E5%85%83%E6%B0%97">元気</a>
   </div>
