--- a/test_proxy.html
+++ b/test_proxy.html
@@ -135,10 +135,10 @@ function myBack() {
     <input id="back" disabled="true" type="button" value="Back"
                               onclick="myBack();"/>
     <input type="button" value="Go!" onclick="myGo();"/><br>
-    <input id="autoadd" type="checkbox">Auto add links on load</input>
-    <input type="button" value="Add links"
+    <input id="autoadd" type="checkbox">Auto-add kanji info on load</input>
+    <input type="button" value="Add kanji info"
                               onclick="myAddLinks();"/>
-    <input type="button" value="Remove links"
+    <input type="button" value="Remove kanji info"
                               onclick="myRemoveLinks();"/>
 </td></tr></table>
     <div id="showerr"></div>
