fixed relative paths and popup position

--- a/kanjax/kanjax_popup_template.html
+++ b/kanjax/kanjax_popup_template.html
@@ -8,7 +8,7 @@
   On: <span id="onyomi" class="medium japanese">{{onyomi}}</span>,&nbsp;&nbsp;
   Kun: <span id="kunyomi" class="medium japanese">{{kunyomi}}</span></div>
 <span class="medium editable" id="desc">{{desc}}</span><br/>
-<img id="strokes" src="kanjax/images/{{strokes}}"/>
+<img id="strokes" src="{{KANJAX_BASEPATH}}images/{{strokes}}"/>
 <div class="medium">
   <a href="http://jisho.org/search/%23kanji%20{{kanji}}" id="jisho">Jisho</a>
   <a href="http://kanji.koohii.com/study/kanji/{{kanji}}" id="koohii">Koohii</a>
