experimental furigana addition

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -58,86 +58,89 @@ iframe {
 </style>
 <script language="JavaScript" type="text/javascript">
 $(function() {
-  KanJax.setupPopup();
+    KanJax.setupPopup();
 });
 
 function setError(e) {
-  var showerr = document.getElementById("showerr");
-  showerr.innerText = e ? e.message : "";
+    var showerr = document.getElementById("showerr");
+    showerr.innerText = e ? e.message : "";
 }
 
 function myAddLinks() {
-  var iframe = document.getElementById("myiframe");
-  try {
-    setError();
-    KanJax.setup(iframe.contentDocument);
-    KanJax.addLinks(iframe.contentDocument.body);
-  } catch(e) {
-    setError(e);
-  }
+    var iframe = document.getElementById("myiframe");
+    try {
+        setError();
+        KanJax.setup(iframe.contentDocument);
+        //KanJax.addLinks(iframe.contentDocument.body);
+        KanJax.addFurigana(iframe.contentDocument.body);
+    } catch(e) {
+        setError(e);
+    }
 }
 
 function myRemoveLinks() {
-  var iframe = document.getElementById("myiframe");
-  try {
-    setError();
-    KanJax.removeLinks(iframe.contentDocument.body);
-  } catch(e) {
-    setError(e);
-  }
+    var iframe = document.getElementById("myiframe");
+    try {
+        setError();
+        KanJax.removeLinks(iframe.contentDocument.body);
+    } catch(e) {
+        setError(e);
+    }
 }
 
 myHistory = [];
+forceViaProxy = false;
 
 function myFrameLoad() {
-  var iframe = document.getElementById("myiframe");
-  var proxypath = window.location.pathname.replace(/test_proxy\.html$/,'') + 'proxy.php';
-  if(iframe.contentWindow.location.origin != window.location.origin
-    || iframe.contentWindow.location.pathname != proxypath) {
-    var outurl = window.location.origin + proxypath + '?url=';
-    var inurl = iframe.contentWindow.location.origin;
-    if(iframe.contentWindow.location.origin == window.location.origin
-      && myHistory.length >= 1)
-      inurl = new URL(myHistory[0]).origin;
-    inurl += iframe.contentWindow.location.pathname + iframe.contentWindow.location.search;
-    var url = outurl + encodeURIComponent(inurl) + iframe.contentWindow.location.hash;
-    iframe.contentWindow.location = url;
-    return;
-  }
+    var iframe = document.getElementById("myiframe");
+    var proxypath = window.location.pathname.replace(/test_proxy\.html$/,'') + 'proxy.php';
+    if(forceViaProxy
+        && (iframe.contentWindow.location.origin != window.location.origin
+        || iframe.contentWindow.location.pathname != proxypath)) {
+        var outurl = window.location.origin + proxypath + '?url=';
+        var inurl = iframe.contentWindow.location.origin;
+        if(iframe.contentWindow.location.origin == window.location.origin
+        && myHistory.length >= 1)
+        inurl = new URL(myHistory[0]).origin;
+        inurl += iframe.contentWindow.location.pathname + iframe.contentWindow.location.search;
+        var url = outurl + encodeURIComponent(inurl) + iframe.contentWindow.location.hash;
+        iframe.contentWindow.location = url;
+        return;
+    }
 
-  var params = iframe.contentWindow.location.search;
-  var url = decodeURIComponent(params.replace(/.*url=/,''));
+    var params = iframe.contentWindow.location.search;
+    var url = decodeURIComponent(params.replace(/.*url=/,''));
 
-  var address = document.getElementById("address");
-  address.value = url;
+    var address = document.getElementById("address");
+    address.value = url;
 
-  myHistory.unshift(url);
-  if(myHistory.length > 1) {
-    var back = document.getElementById("back");
-    back.disabled = false;
-  }
+    myHistory.unshift(url);
+    if(myHistory.length > 1) {
+        var back = document.getElementById("back");
+        back.disabled = false;
+    }
 
-  var autoadd = document.getElementById("autoadd");
-  if(autoadd.checked)
-    myAddLinks();
+    var autoadd = document.getElementById("autoadd");
+    if(autoadd.checked)
+        myAddLinks();
 }
 
 function myGo() {
-  var iframe = document.getElementById("myiframe");
-  var address = document.getElementById("address");
-  iframe.contentWindow.location = "proxy.php?url=" + encodeURIComponent(address.value);
+    var iframe = document.getElementById("myiframe");
+    var address = document.getElementById("address");
+    iframe.contentWindow.location = "proxy.php?url=" + encodeURIComponent(address.value);
 }
 
 function myBack() {
-  if(myHistory.length <= 1)
-    return;
-  myHistory.shift();
-  var iframe = document.getElementById("myiframe");
-  iframe.contentWindow.location = "proxy.php?url=" + encodeURIComponent(myHistory[0]);
-  if(myHistory.length <= 1) {
-    var back = document.getElementById("back");
-    back.disabled = true;
-  }
+    if(myHistory.length <= 1)
+        return;
+    myHistory.shift();
+    var iframe = document.getElementById("myiframe");
+    iframe.contentWindow.location = "proxy.php?url=" + encodeURIComponent(myHistory[0]);
+    if(myHistory.length <= 1) {
+        var back = document.getElementById("back");
+        back.disabled = true;
+    }
 }
 </script>
 <body>
@@ -149,14 +152,18 @@ function myBack() {
     <input id="back" disabled="true" type="button" value="Back"
                               onclick="myBack();"/>
     <input type="button" value="Go!" onclick="myGo();"/><br>
-    <input id="autoadd" type="checkbox">Auto-add kanji info on load</input>
+    <input id="autoadd" checked="true" type="checkbox">Auto-add kanji info on load</input>
     <input type="button" value="Add kanji info"
                               onclick="myAddLinks();"/>
     <input type="button" value="Remove kanji info"
                               onclick="myRemoveLinks();"/>
 </td></tr></table>
     <div id="showerr"></div>
+    
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/iframe/%E6%97%A5%E6%9C%AC%20-%20Wikipedia.html"></iframe> -->
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2F127.0.0.1%2F~maurizio%2Fkanjax%2Fiframe%2F%25E6%2597%25A5%25E6%259C%25AC%2520-%2520Wikipedia.html"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe> -->
-    <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe>
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
+    <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe>
 </body>
 </html>
