--- a/test.html
+++ b/test.html
@@ -38,6 +38,7 @@ body {
   Go back to the <a href="https://github.com/maurimo/KanJax">page on Github</a>
   <div class="container">
     <h3>Normal text</h3>
+    <span class="kjruby"><span class="kjrt">ごうけい</span>合計</span><br/>
     かなり多くのアメリカ人が寿司を好む。<br/>
     こうして私はいつも魚を料理する。<br/>
     <input type="button" value="Add kanji info in the page"
