removing of rubies implemented.

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -99,7 +99,13 @@ function myRemoveLinks() {
 }
 
 function myRemoveRubies() {
-    alert("unsupported (yet...!)");
+    var iframe = document.getElementById("myiframe");
+    try {
+        setError();
+        KanJax.removeRubies(iframe.contentDocument.body);
+    } catch(e) {
+        setError(e);
+    }
 }
 
 myHistory = [];
@@ -189,8 +195,7 @@ function myBack() {
     </span>
 </td></tr></table>
     <div id="showerr"></div>
-    
-    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/iframe/%E6%97%A5%E6%9C%AC%20-%20Wikipedia.html"></iframe> -->
+
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2F127.0.0.1%2F~maurizio%2Fkanjax%2Fiframe%2F%25E6%2597%25A5%25E6%259C%25AC%2520-%2520Wikipedia.html"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
