switched info elements to "span", it's easier to avoid style conflicts.

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -198,7 +198,9 @@ function myBack() {
 
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2F127.0.0.1%2F~maurizio%2Fkanjax%2Fiframe%2F%25E6%2597%25A5%25E6%259C%25AC%2520-%2520Wikipedia.html"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe> -->
-    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
-    <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe>
+    <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe>
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe> -->
+    <!-- fixme: -->
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2Fwww.hiesyo.com%2Ftabemono%2F"></iframe> -->
 </body>
 </html>
