works entirely from local via hidden iframe. fixed bug removing rubies, where kanjies were disappearing.

--- a/test.html
+++ b/test.html
@@ -9,7 +9,8 @@
 <script src="kanjax/kanjax.js"></script>
 <script language="JavaScript" type="text/javascript">
 $(function() {
-  KanJax.basicInstall();
+    KanJax.loadStaticJSON = true;
+    KanJax.basicInstall();
 });
 </script>
 </head>
