--- a/test_proxy.html
+++ b/test_proxy.html
@@ -182,12 +182,12 @@ function myBack() {
                               onclick="myBack();"/>
     <input type="button" value="Go!" onclick="myGo();"/><br/>
     <span style="font-size: 70%">
-    <input id="autoadd" checked="1" type="checkbox">Auto-add kanji info on load</input>
+    <input id="autoadd" type="checkbox">Auto-add kanji info on load</input>
     <input type="button" value="Add info"
                               onclick="myAddLinks();"/>
     <input type="button" value="Remove info"
                               onclick="myRemoveLinks();"/><br/>
-    <input id="autoaddrubies" checked="1" type="checkbox">Auto-add rubies on load</input>
+    <input id="autoaddrubies" type="checkbox">Auto-add rubies on load</input>
     <input type="button" value="Add rubies"
                               onclick="myAddRubies();"/>
     <input type="button" value="Remove rubies"
@@ -197,9 +197,9 @@ function myBack() {
     <div id="showerr"></div>
 
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2F127.0.0.1%2F~maurizio%2Fkanjax%2Fiframe%2F%25E6%2597%25A5%25E6%259C%25AC%2520-%2520Wikipedia.html"></iframe> -->
-    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe> -->
+    <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe>
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
-    <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe>
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe> -->
     <!-- fixme: -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2Fwww.hiesyo.com%2Ftabemono%2F"></iframe> -->
 </body>
