--- a/test_proxy.html
+++ b/test_proxy.html
@@ -109,7 +109,7 @@ function myRemoveRubies() {
 }
 
 myHistory = [];
-forceViaProxy = false;
+forceViaProxy = true;
 
 function myFrameLoad() {
     var iframe = document.getElementById("myiframe");
