--- a/test.html
+++ b/test.html
@@ -10,7 +10,9 @@
 <script language="JavaScript" type="text/javascript">
 $(function() {
     KanJax.loadStaticJSON = true;
-    KanJax.basicInstall();
+    KanJax.setup();
+    KanJax.setupPopup();
+    KanJax.addRubies();
 });
 </script>
 </head>
