works, experiments with tooltips

--- a/test.html
+++ b/test.html
@@ -41,6 +41,7 @@ body {
   Go back to the <a href="https://github.com/maurimo/KanJax">page on Github</a>
   <div class="container">
     <h3>Normal text</h3>
+    <span data-tooltip="Custom tooltip on the left." data-tooltip-position="left">Custom left tooltip.</span>
     醤油<br/>
     かなり多くのアメリカ人が寿司を好む。<br/>
     こうして私はいつも魚を料理する。<br/>
