script import, fixed db name

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 <script src="kanjax/kanjax.js"></script>
 <script language="JavaScript" type="text/javascript">
 $(function() {
-    KanJax.loadStaticJSON = true;
+    //KanJax.loadStaticJSON = true;
     KanJax.setup();
     KanJax.setupPopup();
     KanJax.addRubies();
