--- a/test.html
+++ b/test.html
@@ -12,7 +12,9 @@ $(function() {
     //KanJax.loadStaticJSON = true;
     KanJax.setup();
     KanJax.setupPopup();
-    KanJax.addRubies();
+    KanJax.addRubies(document.body, { success: function() {
+        KanJax.addLinks();
+    }});
 });
 </script>
 </head>
@@ -41,8 +43,8 @@ body {
   Go back to the <a href="https://github.com/maurimo/KanJax">page on Github</a>
   <div class="container">
     <h3>Normal text</h3>
-    <span data-tooltip="Custom tooltip on the left." data-tooltip-position="left">Custom left tooltip.</span>
-    醤油<br/>
+    醤油。<br/>
+    もの。<br/>
     かなり多くのアメリカ人が寿司を好む。<br/>
     こうして私はいつも魚を料理する。<br/>
     <input type="button" value="+ Info"
