selective options, more fragments

--- a/test_proxy.html
+++ b/test_proxy.html
@@ -57,6 +57,7 @@ iframe {
 }
 </style>
 <script language="JavaScript" type="text/javascript">
+KanJax.basePath = '/~maurizio/kanjax/kanjax/';
 $(function() {
     KanJax.setupPopup();
 });
@@ -109,7 +110,7 @@ function myRemoveWordInfo() {
 }
 
 myHistory = [];
-forceViaProxy = true;
+forceViaProxy = false;//true;
 
 function myFrameLoad() {
     var iframe = document.getElementById("myiframe");
@@ -189,15 +190,15 @@ function myBack() {
                               onclick="myRemoveKanjiInfo();"/><br/>
     <input id="autoaddrubies" type="checkbox">Auto-add rubies on load</input>
     <input type="button" value="Add word info"
-                              onclick="myAddWordInfo();"/>
+                              onclick="myAddWordInfo({kanji_info: 0, dict: 1, rubies: 1});"/>
     <input type="button" value="Remove word info"
                               onclick="myRemoveWordInfo();"/>
     </span>
 </td></tr></table>
     <div id="showerr"></div>
 
-    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=http%3A%2F%2F127.0.0.1%2F~maurizio%2Fkanjax%2Fiframe%2F%25E6%2597%25A5%25E6%259C%25AC%2520-%2520Wikipedia.html"></iframe> -->
-    <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe>
+    <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/iframe/%E6%97%A5%E6%9C%AC%20-%20Wikipedia.html"></iframe>
+    <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E6%2597%25A5%25E6%259C%25AC"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="proxy.php?url=http%3A%2F%2Fjisho.org%2Fsearch%2F%2523kanji%2520%25E8%25B2%25AB"></iframe> -->
     <!-- <iframe id="myiframe" onLoad="myFrameLoad()" src="http://127.0.0.1/~maurizio/kanjax/proxy.php?url=https%3A%2F%2Fja.wikipedia.org%2Fwiki%2F%25E3%2583%25A2%25E3%2583%25BC%25E3%2583%25A9"></iframe> -->
     <!-- fixme: -->
